--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "webpack-dev-server --progress",
+    "start:dummy-server": "json-server -w dummyData.json",
     "build:prod": "webpack --env prod"
   },
   "keywords": [],
@@ -22,6 +23,7 @@
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
     "json-loader": "^0.5.7",
+    "json-server": "^0.14.2",
     "mini-css-extract-plugin": "^0.6.0",
     "node-sass": "^4.12.0",
     "postcss-loader": "^3.0.0",
@@ -36,7 +38,6 @@
   "dependencies": {
     "@babel/polyfill": "^7.4.4",
     "jquery": "^3.4.1",
-    "lodash": "^4.17.11",
     "postcss-scss": "^2.0.0"
   }
 }
